Fixed [904706] Thimble pages not scrollable on iOS

--- a/public/stylesheets/makedetails.less
+++ b/public/stylesheets/makedetails.less
@@ -199,3 +199,10 @@ body {
   }
 }
 
+@media only screen and (device-width: 768px) {
+  .thimble-project-container {
+	  /* For iOS scrolling within iframe.*/
+	  overflow: auto;
+	  -webkit-overflow-scrolling: touch;
+	}
+}
